--- a/app/src/main/res/layout/image_list_item.xml
+++ b/app/src/main/res/layout/image_list_item.xml
@@ -22,12 +22,12 @@
 
             <ImageView
                 android:id="@+id/share_button"
-                android:layout_width="34dp"
+                android:layout_width="16dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:src="@android:drawable/ic_menu_share" />
+                android:src="@drawable/ic_share_secondary_text_24dp" />
 
             <TextView
                 android:id="@+id/image_text"
