use move upward behaviour again

--- a/app/src/main/res/layout/activity_show_gif.xml
+++ b/app/src/main/res/layout/activity_show_gif.xml
@@ -56,8 +56,8 @@
         android:clipChildren="false"
         android:elevation="4dp"
         app:layout_anchor="@id/cardView"
-        app:layout_anchorGravity="end|bottom">
-        <!--app:layout_behavior="com.sthagios.stopmotion.show.MoveUpwardBehaviour">-->
+        app:layout_anchorGravity="end|bottom"
+        app:layout_behavior="com.sthagios.stopmotion.show.MoveUpwardBehaviour">
 
 
         <android.support.design.widget.FloatingActionButton
